test/types/unions/union-typelessField2.chpl
union u {
  var x;
  var y;
  var z;
}

var myU: u;
myU.x = 42;
writeln(myU);
myU.y = "hi";

